# timedoctor_screenshot_analyzer

./: .gitignore  README.md  main.py  pyproject.toml  work_categories-example.json
src/: analyze_screenshots.py  extract_and_organize.py
