[project]
name = "timedoctor-analyzer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11.9"
dependencies = [
    "matplotlib>=3.10.3",
    "opencv-python>=4.11.0.86",
    "pandas>=2.3.0",
    "pillow>=11.2.1",
    "pytesseract>=0.3.13",
    "scikit-image>=0.25.2",
    "scipy>=1.15.3",
]
[tool.setuptools.packages.find]
exclude = [
    "data*",
    "reports*",
    "extracted_screenshots*",
    "zipped_screenshot_folders*",
    "images*",
    "src*"
]